Closed
Bug 627272
Opened 12 years ago
Closed 11 years ago
Cannot start dragging titlebar when Firefox button opens its menu
Categories
(Core :: XUL, defect)
Tracking
()
RESOLVED
FIXED
mozilla5
People
(Reporter: masayuki, Assigned: masayuki)
References
Details
Attachments
(1 file)
1.34 KB,
patch
|
enndeakin
:
review+
dbaron
:
approval2.0-
|
Details | Diff | Splinter Review |
1. Press Firefox button and open its menu 2. mousedown on titlebar of the window 3. drag the window Actual result: Cannot move the window Expected result: Can move the window If the opened menu is context menu or menus on menu bar, I can move the window. The behavior is native behavior on Windows. The cause is that XUL button menu consumes mousedown event on outside of the menu. I think that this is just a mistake. The attached patch passed all tests on tryserver.
Attachment #505305 -
Flags: review?(enndeakin)
Comment 1•12 years ago
|
||
Confirmed. Might want to add to the whiteboard [has patch].
Updated•12 years ago
|
Attachment #505305 -
Flags: review?(enndeakin) → review+
Assignee | ||
Comment 2•12 years ago
|
||
Comment on attachment 505305 [details] [diff] [review] Patch v1.0 This provides platform native behavior for XUL menu button (only changed on Windows). I don't think that this patch affects other XUL elements, so, I think this isn't risky.
Attachment #505305 -
Flags: approval2.0?
Comment 3•12 years ago
|
||
Comment on attachment 505305 [details] [diff] [review] Patch v1.0 I think this should land after Gecko 2.0 / Firefox 4.0 branches.
Attachment #505305 -
Flags: approval2.0? → approval2.0-
Assignee | ||
Updated•11 years ago
|
Keywords: checkin-needed
Please attach an import ready patch (with the author name and the commit message) before setting checkin-needed.
Keywords: checkin-needed
Comment 5•11 years ago
|
||
http://hg.mozilla.org/mozilla-central/rev/6ff7867b840f
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.2
You need to log in
before you can comment on or make changes to this bug.
Description
•