Bug 627272 - Cannot start dragging titlebar when Firefox button opens its menu; r=enndeakin